--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
-</head>
-
-<body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
-</body>
-
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://villaribv.sharepoint.com/sites/PartnerPortal" />
+    <script>
+      window.location.href = "https://villaribv.sharepoint.com/sites/PartnerPortal";
+    </script>
+    <title>Redirecting...</title>
+  </head>
+  <body>
+    Redirecting to the Villari Partner Portal...
+  </body>
 </html>
